charts/archive/ingress-nginx/test-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system
  annotations:  
    cert-manager.io/cluster-issuer: letsencrypt-production
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.kubesight.online
      http:
        paths:
        - path: /kiali
          pathType: Prefix
          backend:
            service:
              name: kiali
              port:
                number: 20001
  tls:
  - hosts:
    - argocd.kubesight.online
    secretName: kubesight-cert
